<resources>
    <string name="app_name">training-blah-blah-blah</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="poster">Poster</string>
    <string name="movie_popular">Movie Popular</string>
    <string name="movie_top_rating">Movie Top Rating</string>
    <string name="upcoming">UpComing</string>
    <string name="search_movie_by_keyword">Search Movie By KeyWord</string>
    <string name="movie_by_genres">Movie By Genres(Popular)</string>
    <string name="television_by_genres">Television By Genres(Popular)</string>
    <string name="posterimage">posterImage</string>
    <string name="back_drop_image">back drop image</string>
    <string name="actor">Actor</string>
    <string name="human">human</string>
    <string name="crew">Crew</string>
    <string name="myfav">myfav</string>
    <string name="movie">Movie</string>
    <string name="television">Television</string>
    <string name="love">Love It!!</string>
    <string name="noctic_button">Favored</string>
    <string name="session">myfav</string>
    <string name="sesstion_name">tv</string>
    <string name="session_name_movie">movie</string>
    <string name="success">Success</string>
    <string name="welcome_message">You are fuckingGuess</string>
    <string name="fucker_Email">FuckingGuess@OntheHell.Heaven</string>
    <string name="image_des_content_menu_nav">its not ur business</string>
    <string name="title_activity_runner">RunnerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_season">TV-Season</string>
    <string name="fuck_message">ahh~~ fuck you did it ~~hha</string>
    <string name="episode_image">Episode Image</string>
    <string name="season">Season</string>
    <string name="i_will_watch_it_later">i will watch it later</string>
    <string name="success_fuck_text">Added La Fuck!!!</string>
    <string name="wish_list">Wish List</string>
    <string name="rate_it">rate it!!</string>
    <string name="you_are_just_fucking_guess">You are just fucking Guess!!</string>
    <string name="emptyimage">emptyImage</string>
    <string name="my_favorite">My Favorite</string>
</resources>
