<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/back_drop_image" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/back_drop_image"
                android:src="@drawable/you_icon" />
        </RelativeLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RatingBar
                android:id="@+id/rating"
                android:numStars="5"
                android:stepSize="0.1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/rate_it"
                android:background="@color/egg"
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btnFav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/love"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/i_will_watch_it_later"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/brown"
            android:paddingStart="20dp"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/actor"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/actorList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/crew"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/crewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp" />

        <FrameLayout
            android:id="@+id/seasonFrame"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/tv_season"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/seasonList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>