<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/search_movie_by_keyword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/movie_by_genres"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listMovieGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/television_by_genres"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listTelevisionGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp" />
    </LinearLayout>
</ScrollView>