<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:paddingStart="5dp"
                android:text="@string/movie_popular"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:paddingStart="5dp"
                android:text="@string/movie_top_rating"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/topList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/brown">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:paddingStart="5dp"
                android:text="@string/upcoming"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/upComingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>